test/sematest/valid/redefinition_of_variable.java
class A {
  public static void main(String[] args) {
  }

  public void bla(int a, int b){
    int c;
    System.out.println(a);
    System.out.println(b);
    System.out.println(c);
  }

  public int c;
  public int a;
  public int b;
}