test/sematest/invalid/identifier_system_in_scope2.java
class A {
  public int System;
  public static void main(String[] args) {
    System.out.println(3);
  }
}